# libavc

./: .gitignore  CMakeLists.txt  README.md
decoder/: CMakeLists.txt
encoder/: CMakeLists.txt
test/decoder/: CMakeLists.txt  main.c
test/encoder/: CMakeLists.txt
